add check for v1.32 deprecated apis
added Kyverno rules and test cases to check for deprecated FlowSchema
and PriorityLevelConfiguration in v1.32. included handling for v1beta3
API versions.

https://kubernetes.io/docs/reference/using-api/deprecation-guide/#v1-32
Signed-off-by: Enzo Venturi <nzventuri@proton.me>

--- a/best-practices-cel/check-deprecated-apis/.kyverno-test/kyverno-test.yaml
+++ b/best-practices-cel/check-deprecated-apis/.kyverno-test/kyverno-test.yaml
@@ -25,3 +25,9 @@ results:
   - bad-flowschema
   result: fail
   rule: validate-v1-29-removals
+- kind: FlowSchema
+  policy: check-deprecated-apis
+  resources:
+  - bad-flowschema-v1beta3
+  result: fail
+  rule: validate-v1-32-removals
