--- a/best-practices-cel/check-deprecated-apis/check-deprecated-apis.yaml
+++ b/best-practices-cel/check-deprecated-apis/check-deprecated-apis.yaml
@@ -92,4 +92,20 @@ spec:
             messageExpression: >-
               object.apiVersion + '/' + object.kind + ' is deprecated and will be removed in v1.29.
               See: https://kubernetes.io/docs/reference/using-api/deprecation-guide/'
-  
+  - name: validate-v1-32-removals
+    match:
+      any:
+      - resources:
+          kinds:
+          - flowcontrol.apiserver.k8s.io/*/FlowSchema
+          - flowcontrol.apiserver.k8s.io/*/PriorityLevelConfiguration
+    celPreconditions:
+      - name: "object.apiVersion"
+        expression: "object.apiVersion in ['flowcontrol.apiserver.k8s.io/v1beta3']"
+    validate:
+      cel:
+        expressions:
+          - expression: "false"
+            messageExpression: >-
+              object.apiVersion + '/' + object.kind + ' is deprecated and will be removed in v1.32.
+              See: https://kubernetes.io/docs/reference/using-api/deprecation-guide/'
