update for list check
Signed-off-by: Mohd Kamaal <mohdcode@MBA.local>

--- a/other-vpol/advanced-restrict-image-registries/.chainsaw-test/cm.yaml
+++ b/other-vpol/advanced-restrict-image-registries/.chainsaw-test/cm.yaml
@@ -4,5 +4,6 @@ metadata:
   name: clusterregistries
   namespace: default
 data:
-  registries: ghcr.io/
-
+  registries: |
+   - ghcr.io/
+   - myregistry/
