--- a/other-vpol/advanced-restrict-image-registries/.chainsaw-test/pod-bad.yaml
+++ b/other-vpol/advanced-restrict-image-registries/.chainsaw-test/pod-bad.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: busybox01
-    image: ghcr.io/kyverno/test-busybox:1.35
+    image: registrymy/kyverno/test-busybox:1.35
 ---
 apiVersion: v1
 kind: Pod
@@ -28,7 +28,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: badpod03
-  namespace: imageregistries-ns02
+  namespace: imageregistries-ns01
 spec:
   initContainers:
   - name: busybox01-init
