--- a/other-vpol/advanced-restrict-image-registries/.chainsaw-test/pod-good.yaml
+++ b/other-vpol/advanced-restrict-image-registries/.chainsaw-test/pod-good.yaml
@@ -19,7 +19,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: goodpod02
-  namespace: imageregistries-ns02
+  namespace: imageregistries-ns01
 spec:
   initContainers:
   - name: busybox01-init
@@ -37,7 +37,7 @@ metadata:
 spec:
   initContainers:
   - name: busybox01-init
-    image: ghcr.io/busybox:1.35
+    image: myregistry/busybox:1.35
   containers:
   - name: busybox01
     image: ghcr.io/busybox:1.35
