--- a/other-vpol/advanced-restrict-image-registries/.chainsaw-test/cm.yaml
+++ b/other-vpol/advanced-restrict-image-registries/.chainsaw-test/cm.yaml
@@ -4,6 +4,4 @@ metadata:
   name: clusterregistries
   namespace: default
 data:
-  registries: |
-   - ghcr.io/
-   - myregistry/
+  registries:  "ghcr.io, myregistry"
