--- a/other-vpol/advanced-restrict-image-registries/.chainsaw-test/ns-01.yaml
+++ b/other-vpol/advanced-restrict-image-registries/.chainsaw-test/ns-01.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
-    corp.com/allowed-registries: '["img.corp.com/", "docker.io/"]'
+    corp.com/allowed-registries: "img.corp.com, docker.io"
   name: imageregistries-ns01
 
 
