--- a/other-vpol/advanced-restrict-image-registries/.chainsaw-test/pod-bad.yaml
+++ b/other-vpol/advanced-restrict-image-registries/.chainsaw-test/pod-bad.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   containers:
   - name: busybox01
-    image: registrymy/kyverno/test-busybox:1.35
+    image: ghrc.io/kyverno/test-busybox:1.35
 ---
 apiVersion: v1
 kind: Pod
