--- a/other-vpol/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
+++ b/other-vpol/advanced-restrict-image-registries/advanced-restrict-image-registries.yaml
@@ -27,21 +27,31 @@ spec:
       operations:  ["CREATE", "UPDATE"]
       resources:   ["pods"]
   variables:
-    - name: cm
-      expression: >-
-        resource.Get("v1", "configmaps", "default", "clusterregistries")
-    - name: allContainers
-      expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
-    - name: nsregistries
-      expression: >-
-        namespaceObject.metadata.?annotations[?'corp.com/allowed-registries'].orValue('')
-    - name: registriesData
-      expression: >-
-        variables.cm.data[?'registries'].orValue('')
+            - name: cm
+              expression: >-
+               resource.Get("v1", "configmaps", "default", "clusterregistries")
+            - name: allContainers
+              expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
+            - name: nsRegistries
+              expression: >-
+                namespaceObject.metadata.?annotations["corp.com/allowed-registries"]
+                .orValue("") .split(",").filter(reg, reg != "")
+
+            - name: cmRegistries
+              expression: >-
+               variables.cm.data[?'registries'].orValue("").split(",").filter(reg, reg != "")
+
   validations:
-    - expression: >-
-        variables.allContainers.all(container, 
-         variables.nsregistries.contains(container.image.split('/')[0] + '/') || 
-          variables.registriesData.contains(container.image.split('/')[0] + '/')
-        )
-      message: This Pod names an image that is not from an approved registry.
+      - expression: >-
+              variables.allContainers.all(container, 
+                (
+                  variables.cmRegistries.exists(cmRegistry,
+                    container.image.startsWith(cmRegistry.trim()))
+                ) || (
+                  variables.nsRegistries.exists(nsRegistry,
+                    container.image.startsWith(nsRegistry.trim()))
+                )
+              )
+
+        messageExpression: >-
+               'This Pod names an image that is not from an approved registry' + variables.nsRegistries.join(',') + '  ' + variables.cmRegistries.join(',')
