--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/chainsaw-test.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/chainsaw-test.yaml
@@ -8,22 +8,22 @@ spec:
   steps:
   - name: step-01
     try:
-    - apply:
+    - create:
         file: ../restricted-exclude-capabilities.yaml
     - assert:
         file: policy-ready.yaml
   - name: step-02
     try:
-    - apply:
+    - create:
         file: pod-good.yaml
-    - apply:
+    - create:
         expect:
         - check:
             ($error != null): true
         file: pod-bad.yaml
-    - apply:
+    - create:
         file: podcontroller-good.yaml
-    - apply:
+    - create:
         expect:
         - check:
             ($error != null): true
