--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/pod-bad.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/pod-bad.yaml
@@ -239,7 +239,7 @@ spec:
     image: ghcr.io/kyverno/test-nginx:dontpull
     securityContext:
       seLinuxOptions:
-        type: container_engine_t
+        type: invalid
       allowPrivilegeEscalation: false
       runAsNonRoot: true
       seccompProfile:
