--- a/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/podcontroller-bad.yaml
+++ b/pod-security/subrule/restricted/restricted-exclude-capabilities/.chainsaw-test/podcontroller-bad.yaml
@@ -338,7 +338,7 @@ spec:
         image: ghcr.io/kyverno/test-nginx:dontpull
         securityContext:
           seLinuxOptions:
-            type: container_engine_t
+            type: invalid
           allowPrivilegeEscalation: false
           runAsNonRoot: true
           seccompProfile:
@@ -847,7 +847,7 @@ spec:
             image: ghcr.io/kyverno/test-nginx:dontpull
             securityContext:
               seLinuxOptions:
-                type: container_engine_t
+                type: invalid
               allowPrivilegeEscalation: false
               runAsNonRoot: true
               seccompProfile:
