--- a/other/record-creation-details/record-creation-details.yaml
+++ b/other/record-creation-details/record-creation-details.yaml
@@ -40,7 +40,7 @@ spec:
       patchStrategicMerge:
         metadata:
           annotations:
-            kyverno.io/created-by: "{{ request.userInfo | to_string(@) }}"
+            kyverno.io/created-by: "{{ request.userInfo.{groups: groups, username: username} | to_string(@) }}"
   - name: prevent-updates-deletes-userinfo-annotations
     match:
       any:
