chore: bump k8s versions used for chainsaw tests (#1285)
* chore: bump k8s versions used for chainsaw tests

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* install oras

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* fix cleanup temp role

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* fix

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* fix

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* fix

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* fix

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

---------

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/cleanup/cleanup-empty-replicasets/.chainsaw-test/cluster-role.yaml
+++ b/cleanup/cleanup-empty-replicasets/.chainsaw-test/cluster-role.yaml
@@ -5,10 +5,10 @@ metadata:
     app.kubernetes.io/component: cleanup-controller
     app.kubernetes.io/instance: kyverno
     app.kubernetes.io/part-of: kyverno
-  name: kyverno:cleanup-controller:temp
+  name: kyverno:cleanup-controller:replicasets
 rules:
 - apiGroups:
-  - "apps"
+  - apps
   resources:
   - replicasets
   verbs:
