--- a/best-practices-vpol/disallow-latest-tag/.kyverno-test/kyverno-test.yaml
+++ b/best-practices-vpol/disallow-latest-tag/.kyverno-test/kyverno-test.yaml
@@ -7,7 +7,8 @@ policies:
 resources:
 - resource.yaml
 results:
-- kind: Deployment
+- isValidatingPolicy: true
+  kind: Deployment
   policy: disallow-latest-tag
   resources:
   - baddeployment01
