--- a/supply-chain-security/validate-container-sbom/validate-container-sbom.yaml
+++ b/supply-chain-security/validate-container-sbom/validate-container-sbom.yaml
@@ -27,19 +27,20 @@ spec:
       - resources:
           kinds:
             - Pod
+    exclude:
+      any:
+      - resources:
+          namespaces:
+            - kube-system
+            - kube-public
+            - kube-node-lease
+            - kyverno
     validate:
       message: "Each container must have an associated SBOM referenced by annotation."
       pattern:
-        spec:
-          containers:
-          - =(name): "*"
-            image: "*"
-          =(initContainers):
-          - =(name): "*"
-            image: "*"
-          metadata:
-            annotations:
-              "security.kyverno.io/container-sbom-*": "?*"
+        metadata:
+          annotations:
+            "security.kyverno.io/container-sbom-*": "?*"
 
   - name: validate-sbom-format
     match:
@@ -47,6 +48,14 @@ spec:
       - resources:
           kinds:
             - Pod
+    exclude:
+      any:
+      - resources:
+          namespaces:
+            - kube-system
+            - kube-public
+            - kube-node-lease
+            - kyverno
     validate:
       message: "SBOM must be in a valid format (CycloneDX or SPDX) and properly formatted."
       foreach:
@@ -61,6 +70,14 @@ spec:
       - resources:
           kinds:
             - Pod
+    exclude:
+      any:
+      - resources:
+          namespaces:
+            - kube-system
+            - kube-public
+            - kube-node-lease
+            - kyverno
     validate:
       message: "SBOM must be signed by an approved authority using a recognized signature format."
       foreach:
@@ -75,94 +92,18 @@ spec:
       - resources:
           kinds:
             - Pod
+    exclude:
+      any:
+      - resources:
+          namespaces:
+            - kube-system
+            - kube-public
+            - kube-node-lease
+            - kyverno
     validate:
       message: "SBOM must include minimum required fields as per government standards."
       foreach:
-      - list: "request.object.spec.containers"
+      - list: "request.object.metadata.annotations[*]"
         pattern:
-          name: "?*"
-          image: "?*"
-        deny:
-          conditions:
-            any:
-            - key: "{{ request.object.metadata.annotations[\"security.kyverno.io/container-sbom-completeness-{{ element.name }}\"] }}"
-              operator: NotEquals
-              value: verified 
----
-apiVersion: kyverno.io/v1
-kind: PolicyReport
-metadata:
-  name: validate-container-sbom-results
-results:
-  - policy: validate-container-sbom
-    rule: validate-sbom-exists
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-without-sbom
-    status: fail
-    scored: true
-  - policy: validate-container-sbom
-    rule: validate-sbom-format
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-with-invalid-sbom
-    status: fail
-    scored: true
-  - policy: validate-container-sbom
-    rule: validate-sbom-signature
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-with-invalid-sbom
-    status: fail
-    scored: true
-  - policy: validate-container-sbom
-    rule: validate-sbom-completeness
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-with-invalid-sbom
-    status: fail
-    scored: true
-  - policy: validate-container-sbom
-    rule: validate-sbom-exists
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-with-valid-sbom
-    status: pass
-    scored: true
-  - policy: validate-container-sbom
-    rule: validate-sbom-format
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-with-valid-sbom
-    status: pass
-    scored: true
-  - policy: validate-container-sbom
-    rule: validate-sbom-signature
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-with-valid-sbom
-    status: pass
-    scored: true
-  - policy: validate-container-sbom
-    rule: validate-sbom-completeness
-    resource:
-      kind: Pod
-      apiVersion: v1
-      namespace: default
-      name: pod-with-valid-sbom
-    status: pass
-    scored: true 
+          key: "security.kyverno.io/container-sbom-completeness-*"
+          value: "verified" 
