--- a/pod-security/baseline/disallow-proc-mount/.chainsaw-test/pod-bad.yaml
+++ b/pod-security/baseline/disallow-proc-mount/.chainsaw-test/pod-bad.yaml
@@ -4,6 +4,7 @@ kind: Pod
 metadata:
   name: badpod01
 spec:
+  hostUsers: false
   containers:
   - name: container01
     image: dummyimagename
@@ -15,6 +16,7 @@ kind: Pod
 metadata:
   name: badpod02
 spec:
+  hostUsers: false
   containers:
   - name: container01
     image: dummyimagename
@@ -28,6 +30,7 @@ kind: Pod
 metadata:
   name: badpod03
 spec:
+  hostUsers: false
   initContainers:
   - name: initcontainer01
     image: dummyimagename
@@ -42,6 +45,7 @@ kind: Pod
 metadata:
   name: badpod04
 spec:
+  hostUsers: false
   initContainers:
   - name: initcontainer01
     image: dummyimagename
@@ -58,6 +62,7 @@ kind: Pod
 metadata:
   name: badpod05
 spec:
+  hostUsers: false
   initContainers:
   - name: initcontainer01
     image: dummyimagename
