--- a/best-practices-vpol/check-deprecated-apis/check-deprecated-apis.yaml
+++ b/best-practices-vpol/check-deprecated-apis/check-deprecated-apis.yaml
@@ -54,6 +54,7 @@ spec:
        - v1
        - v1beta1
        - v1beta2
+       - v1beta3
        resources: ["flowschemas", "prioritylevelconfigurations"]
        operations: ["CREATE", "UPDATE"]
      - apiGroups: ["autoscaling"]
@@ -80,6 +81,7 @@ spec:
                  'node.k8s.io/v1beta1',
                  'flowcontrol.apiserver.k8s.io/v1beta1',
                  'flowcontrol.apiserver.k8s.io/v1beta2',
+                 'flowcontrol.apiserver.k8s.io/v1beta3',
                  'autoscaling/v2beta2',
                  'storage.k8s.io/v1beta1'
                ]
