--- a/tekton/verify-tekton-pipeline-cosign-signated-images/verify-tekton-pipelines-cosign-signed-images.yml
+++ b/tekton/verify-tekton-pipeline-cosign-signated-images/verify-tekton-pipelines-cosign-signed-images.yml
@@ -13,5 +13,5 @@ spec:
               kinds:
                 - Pod
       verifyImages:
-        - image: "index.docker.io/arunvel1988/*"
+        - image: "ghcr.io/kyverno/test-verify-image:signed"
           key: "k8s://kyverno/cosign-key-secret"
