fix: stop using deprecated test field patchedResource
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/karpenter/add-karpenter-daemonset-priority-class/.kyverno-test/kyverno-test.yaml
+++ b/karpenter/add-karpenter-daemonset-priority-class/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - daemonset.yaml
 results:
 - kind: DaemonSet
-  patchedResource: daemonset-patched.yaml
+  patchedResources:
+  - daemonset-patched.yaml
   policy: add-karpenter-daemonset-priority-class
   resources:
   - test/test
