--- a/other/add-pod-proxies/.kyverno-test/kyverno-test.yaml
+++ b/other/add-pod-proxies/.kyverno-test/kyverno-test.yaml
@@ -8,14 +8,16 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: add-pod-proxies
   resources:
   - myapp-pod-1
   result: pass
   rule: add-pod-proxies
 - kind: Pod
-  patchedResource: patchedResource2.yaml
+  patchedResources:
+  - patchedResource2.yaml
   policy: add-pod-proxies
   resources:
   - myapp-pod-2
