--- a/psa/add-psa-labels/.kyverno-test/kyverno-test.yaml
+++ b/psa/add-psa-labels/.kyverno-test/kyverno-test.yaml
@@ -9,14 +9,16 @@ resources:
 - resourcefail.yaml
 results:
 - kind: Namespace
-  patchedResource: patchedResourcefail.yaml
+  patchedResources:
+  - patchedResourcefail.yaml
   policy: add-psa-labels
   resources:
   - test-fail
   result: fail
   rule: add-baseline-enforce-restricted-warn
 - kind: Namespace
-  patchedResource: patchedResource.yaml
+  patchedResources:
+  - patchedResource.yaml
   policy: add-psa-labels
   resources:
   - test
