--- a/best-practices/add-safe-to-evict/.kyverno-test/kyverno-test.yaml
+++ b/best-practices/add-safe-to-evict/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: myapp-pod03-patched.yaml
+  patchedResources:
+  - myapp-pod03-patched.yaml
   policy: add-safe-to-evict
   resources:
   - myapp-pod03
@@ -21,7 +22,8 @@ results:
   result: skip
   rule: annotate-empty-dir
 - kind: Pod
-  patchedResource: myapp-pod04-patched.yaml
+  patchedResources:
+  - myapp-pod04-patched.yaml
   policy: add-safe-to-evict
   resources:
   - myapp-pod04
