--- a/kasten/kasten-minimum-retention/.kyverno-test/kyverno-test.yaml
+++ b/kasten/kasten-minimum-retention/.kyverno-test/kyverno-test.yaml
@@ -9,7 +9,8 @@ resources:
 - kasten-hourly-policy.yaml
 results:
 - kind: Policy
-  patchedResource: patched.yaml
+  patchedResources:
+  - patched.yaml
   policy: kasten-minimum-retention
   resources:
   - hourly-policy
