--- a/other/add-env-vars-from-cm/.kyverno-test/kyverno-test.yaml
+++ b/other/add-env-vars-from-cm/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource01.yaml
+  patchedResources:
+  - patchedResource01.yaml
   policy: add-env-vars-from-cm
   resources:
   - mypod
