--- a/other/add-imagepullsecrets-for-containers-and-initcontainers/.kyverno-test/kyverno-test.yaml
+++ b/other/add-imagepullsecrets-for-containers-and-initcontainers/.kyverno-test/kyverno-test.yaml
@@ -8,28 +8,32 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: add-imagepullsecrets-for-containers-and-initcontainers
   resources:
   - myapp-pod-1
   result: pass
   rule: add-imagepullsecret
 - kind: Pod
-  patchedResource: patchedResource2.yaml
+  patchedResources:
+  - patchedResource2.yaml
   policy: add-imagepullsecrets-for-containers-and-initcontainers
   resources:
   - myapp-pod-2
   result: pass
   rule: add-imagepullsecret
 - kind: Pod
-  patchedResource: patchedResource3.yaml
+  patchedResources:
+  - patchedResource3.yaml
   policy: add-imagepullsecrets-for-containers-and-initcontainers
   resources:
   - myapp-pod-3
   result: skip
   rule: add-imagepullsecret
 - kind: Pod
-  patchedResource: patchedResource4.yaml
+  patchedResources:
+  - patchedResource4.yaml
   policy: add-imagepullsecrets-for-containers-and-initcontainers
   resources:
   - myapp-pod-4
