--- a/other/add-tolerations/.kyverno-test/kyverno-test.yaml
+++ b/other/add-tolerations/.kyverno-test/kyverno-test.yaml
@@ -8,14 +8,16 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patched01.yaml
+  patchedResources:
+  - patched01.yaml
   policy: add-tolerations
   resources:
   - addpod01
   result: pass
   rule: service-toleration
 - kind: Pod
-  patchedResource: patched02.yaml
+  patchedResources:
+  - patched02.yaml
   policy: add-tolerations
   resources:
   - addpod02
