--- a/other/add-ttl-jobs/.kyverno-test/kyverno-test.yaml
+++ b/other/add-ttl-jobs/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: Job
-  patchedResource: patched01.yaml
+  patchedResources:
+  - patched01.yaml
   policy: add-ttl-jobs
   resources:
   - addjob01
