--- a/other/add-volume-deployment/.kyverno-test/kyverno-test.yaml
+++ b/other/add-volume-deployment/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: Deployment
-  patchedResource: patchedResource.yaml
+  patchedResources:
+  - patchedResource.yaml
   policy: add-volume
   resources:
   - mydeploy
