--- a/other/always-pull-images/.kyverno-test/kyverno-test.yaml
+++ b/other/always-pull-images/.kyverno-test/kyverno-test.yaml
@@ -8,14 +8,16 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: always-pull-images
   resources:
   - myapp-pod-1
   result: pass
   rule: always-pull-images
 - kind: Pod
-  patchedResource: patchedResource2.yaml
+  patchedResources:
+  - patchedResource2.yaml
   policy: always-pull-images
   resources:
   - myapp-pod-2
