--- a/other/apply-pss-restricted-profile/.kyverno-test/kyverno-test.yaml
+++ b/other/apply-pss-restricted-profile/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: mutatedmypod.yaml
+  patchedResources:
+  - mutatedmypod.yaml
   policy: apply-pss-restricted-profile
   resources:
   - mypod
