--- a/other/disable-automountserviceaccounttoken/.kyverno-test/kyverno-test.yaml
+++ b/other/disable-automountserviceaccounttoken/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: ServiceAccount
-  patchedResource: patchedResource.yaml
+  patchedResources:
+  - patchedResource.yaml
   policy: disable-automountserviceaccounttoken
   resources:
   - default
