--- a/other/dns-policy-and-dns-config/.kyverno-test/kyverno-test.yaml
+++ b/other/dns-policy-and-dns-config/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource.yaml
+  patchedResources:
+  - patchedResource.yaml
   policy: change-dns-config-policy
   resources:
   - default/myapp-pod
