--- a/other/inject-sidecar-deployment/.kyverno-test/kyverno-test.yaml
+++ b/other/inject-sidecar-deployment/.kyverno-test/kyverno-test.yaml
@@ -8,14 +8,16 @@ resources:
 - resource.yaml
 results:
 - kind: Deployment
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: inject-sidecar
   resources:
   - mydeploy-1
   result: pass
   rule: inject-sidecar
 - kind: Deployment
-  patchedResource: patchedResource2.yaml
+  patchedResources:
+  - patchedResource2.yaml
   policy: inject-sidecar
   resources:
   - mydeploy-2
