--- a/other/mitigate-log4shell/.kyverno-test/kyverno-test.yaml
+++ b/other/mitigate-log4shell/.kyverno-test/kyverno-test.yaml
@@ -8,28 +8,32 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource.yaml
+  patchedResources:
+  - patchedResource.yaml
   policy: log4shell-mitigation
   resources:
   - demo-pod01
   result: pass
   rule: add-log4shell-mitigation-containers
 - kind: Pod
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: log4shell-mitigation
   resources:
   - demo-pod02
   result: pass
   rule: add-log4shell-mitigation-containers
 - kind: Pod
-  patchedResource: patchedResource.yaml
+  patchedResources:
+  - patchedResource.yaml
   policy: log4shell-mitigation
   resources:
   - demo-pod01
   result: pass
   rule: add-log4shell-mitigation-initcontainers
 - kind: Pod
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: log4shell-mitigation
   resources:
   - demo-pod02
