--- a/other/remove-hostpath-volumes/.kyverno-test/kyverno-test.yaml
+++ b/other/remove-hostpath-volumes/.kyverno-test/kyverno-test.yaml
@@ -8,7 +8,8 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource.yaml
+  patchedResources:
+  - patchedResource.yaml
   policy: remove-hostpath-volumes
   resources:
   - busybox
