--- a/other/replace-image-registry/.kyverno-test/kyverno-test.yaml
+++ b/other/replace-image-registry/.kyverno-test/kyverno-test.yaml
@@ -8,28 +8,32 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: replace-image-registry
   resources:
   - myapp-pod1
   result: pass
   rule: replace-image-registry-pod-containers
 - kind: Pod
-  patchedResource: patchedResource3.yaml
+  patchedResources:
+  - patchedResource3.yaml
   policy: replace-image-registry
   resources:
   - myapp-pod2
   result: pass
   rule: replace-image-registry-pod-containers
 - kind: Pod
-  patchedResource: patchedResource3.yaml
+  patchedResources:
+  - patchedResource3.yaml
   policy: replace-image-registry
   resources:
   - myapp-pod2
   result: pass
   rule: replace-image-registry-pod-initcontainers
 - kind: Pod
-  patchedResource: patchedResource1.yaml
+  patchedResources:
+  - patchedResource1.yaml
   policy: replace-image-registry
   resources:
   - myapp-pod1
