fix: stop using deprecated test field patchedResource
Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/best-practices/add-safe-to-evict/.kyverno-test/kyverno-test.yaml
+++ b/best-practices/add-safe-to-evict/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - myapp-pod03-patched.yaml
+  patchedResources: myapp-pod03-patched.yaml
   policy: add-safe-to-evict
   resources:
   - myapp-pod03
@@ -22,8 +21,7 @@ results:
   result: skip
   rule: annotate-empty-dir
 - kind: Pod
-  patchedResources:
-  - myapp-pod04-patched.yaml
+  patchedResources: myapp-pod04-patched.yaml
   policy: add-safe-to-evict
   resources:
   - myapp-pod04
