--- a/external-secret-operator/add-external-secret-prefix/.kyverno-test/kyverno-test.yaml
+++ b/external-secret-operator/add-external-secret-prefix/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: ExternalSecret
-  patchedResources:
-  - patched.yaml
+  patchedResources: patched.yaml
   policy: add-external-secret-prefix
   resources:
   - example
