--- a/karpenter/add-karpenter-daemonset-priority-class/.kyverno-test/kyverno-test.yaml
+++ b/karpenter/add-karpenter-daemonset-priority-class/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - daemonset.yaml
 results:
 - kind: DaemonSet
-  patchedResources:
-  - daemonset-patched.yaml
+  patchedResources: daemonset-patched.yaml
   policy: add-karpenter-daemonset-priority-class
   resources:
   - test/test
