--- a/karpenter/add-karpenter-donot-evict/.kyverno-test/kyverno-test.yaml
+++ b/karpenter/add-karpenter-donot-evict/.kyverno-test/kyverno-test.yaml
@@ -8,16 +8,14 @@ resources:
 - resource.yaml
 results:
 - kind: CronJob
-  patchedResources:
-  - patched02.yaml
+  patchedResources: patched02.yaml
   policy: add-karpenter-donot-evict
   resources:
   - addcronjob01
   result: pass
   rule: do-not-evict-cronjobs
 - kind: Job
-  patchedResources:
-  - patched01.yaml
+  patchedResources: patched01.yaml
   policy: add-karpenter-donot-evict
   resources:
   - addjob01
