--- a/kubecost/enable-kubecost-continuous-rightsizing/.kyverno-test/kyverno-test.yaml
+++ b/kubecost/enable-kubecost-continuous-rightsizing/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Deployment
-  patchedResources:
-  - patchedResource1.yaml
+  patchedResources: patchedResource1.yaml
   policy: enable-kubecost-continuous-rightsizing
   resources:
   - deploy02
