--- a/other/add-default-resources/.kyverno-test/kyverno-test.yaml
+++ b/other/add-default-resources/.kyverno-test/kyverno-test.yaml
@@ -8,24 +8,21 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource1.yaml
+  patchedResources: patchedResource1.yaml
   policy: add-default-resources
   resources:
   - nginx-demo1
   result: pass
   rule: add-default-requests
 - kind: Pod
-  patchedResources:
-  - patchedResource3.yaml
+  patchedResources: patchedResource3.yaml
   policy: add-default-resources
   resources:
   - nginx-demo3
   result: pass
   rule: add-default-requests
 - kind: Pod
-  patchedResources:
-  - patchedResource2.yaml
+  patchedResources: patchedResource2.yaml
   policy: add-default-resources
   resources:
   - nginx-demo2
