--- a/other/add-default-securitycontext/.kyverno-test/kyverno-test.yaml
+++ b/other/add-default-securitycontext/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: add-default-securitycontext
   resources:
   - myapp-pod
