--- a/other/add-env-vars-from-cm/.kyverno-test/kyverno-test.yaml
+++ b/other/add-env-vars-from-cm/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource01.yaml
+  patchedResources: patchedResource01.yaml
   policy: add-env-vars-from-cm
   resources:
   - mypod
