--- a/other/add-imagepullsecrets/.kyverno-test/kyverno-test.yaml
+++ b/other/add-imagepullsecrets/.kyverno-test/kyverno-test.yaml
@@ -8,24 +8,21 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource1.yaml
+  patchedResources: patchedResource1.yaml
   policy: add-imagepullsecrets
   resources:
   - myapp-pod-1
   result: pass
   rule: add-imagepullsecret
 - kind: Pod
-  patchedResources:
-  - patchedResource2.yaml
+  patchedResources: patchedResource2.yaml
   policy: add-imagepullsecrets
   resources:
   - myapp-pod-2
   result: skip
   rule: add-imagepullsecret
 - kind: Pod
-  patchedResources:
-  - patchedResource3.yaml
+  patchedResources: patchedResource3.yaml
   policy: add-imagepullsecrets
   resources:
   - myapp-pod-3
