--- a/other/add-ndots/.kyverno-test/kyverno-test.yaml
+++ b/other/add-ndots/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: add-ndots
   resources:
   - default/myapp-pod
