--- a/other/add-pod-priorityclassname/.kyverno-test/kyverno-test.yaml
+++ b/other/add-pod-priorityclassname/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Deployment
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: add-pod-priorityclassname
   resources:
   - blank
