--- a/other/apply-pss-restricted-profile/.kyverno-test/kyverno-test.yaml
+++ b/other/apply-pss-restricted-profile/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - mutatedmypod.yaml
+  patchedResources: mutatedmypod.yaml
   policy: apply-pss-restricted-profile
   resources:
   - mypod
