--- a/other/create-pod-antiaffinity/.kyverno-test/kyverno-test.yaml
+++ b/other/create-pod-antiaffinity/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Deployment
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: insert-pod-antiaffinity
   resources:
   - mydeploy
