--- a/other/mutate-large-termination-gps/.kyverno-test/kyverno-test.yaml
+++ b/other/mutate-large-termination-gps/.kyverno-test/kyverno-test.yaml
@@ -8,16 +8,14 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource1.yaml
+  patchedResources: patchedResource1.yaml
   policy: mutate-termination-grace-period-seconds
   resources:
   - demo-pod01
   result: pass
   rule: mutate-termination-grace-period-seconds
 - kind: Pod
-  patchedResources:
-  - patchedResource2.yaml
+  patchedResources: patchedResource2.yaml
   policy: mutate-termination-grace-period-seconds
   resources:
   - demo-pod02
