--- a/other/prepend-image-registry/.kyverno-test/kyverno-test.yaml
+++ b/other/prepend-image-registry/.kyverno-test/kyverno-test.yaml
@@ -10,40 +10,35 @@ resources:
 - withoutinitcontainer.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - failpatchedResource.yaml
+  patchedResources: failpatchedResource.yaml
   policy: prepend-registry
   resources:
   - myfailedpod
   result: fail
   rule: prepend-registry-containers
 - kind: Pod
-  patchedResources:
-  - patchedResourceWithoutInitContainer.yaml
+  patchedResources: patchedResourceWithoutInitContainer.yaml
   policy: prepend-registry
   resources:
   - withoutinitcontainer
   result: fail
   rule: prepend-registry-containers
 - kind: Pod
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: prepend-registry
   resources:
   - mypod
   result: pass
   rule: prepend-registry-containers
 - kind: Pod
-  patchedResources:
-  - failpatchedResource.yaml
+  patchedResources: failpatchedResource.yaml
   policy: prepend-registry
   resources:
   - myfailedpod
   result: fail
   rule: prepend-registry-initcontainers
 - kind: Pod
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: prepend-registry
   resources:
   - mypod
