--- a/other/replace-image-registry-with-harbor/.kyverno-test/disabled-test.yaml
+++ b/other/replace-image-registry-with-harbor/.kyverno-test/disabled-test.yaml
@@ -8,16 +8,14 @@ resources:
   - resource.yaml
 results:
   - kind: Pod
-    patchedResources:
-    - patchedResource.yaml
+    patchedResources: patchedResource.yaml
     policy: replace-image-registry-with-harbor
     resources:
       - myapp-pod1
     result: pass
     rule: redirect-docker
   - kind: Pod
-    patchedResources:
-    - patchedResource2.yaml
+    patchedResources: patchedResource2.yaml
     policy: replace-image-registry-with-harbor
     resources:
       - myapp-pod2
