--- a/other/resolve-image-to-digest/.kyverno-test/kyverno-test.yaml
+++ b/other/resolve-image-to-digest/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - pod.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: resolve-image-to-digest
   resources:
   - busybox
