--- a/other/spread-pods-across-topology/.kyverno-test/kyverno-test.yaml
+++ b/other/spread-pods-across-topology/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Deployment
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: spread-pods
   resources:
   - mydeploy
