--- a/psp-migration/add-apparmor/.kyverno-test/kyverno-test.yaml
+++ b/psp-migration/add-apparmor/.kyverno-test/kyverno-test.yaml
@@ -8,16 +8,14 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource1.yaml
+  patchedResources: patchedResource1.yaml
   policy: add-apparmor-annotations
   resources:
   - pod01
   result: pass
   rule: apparmor-runtime-default
 - kind: Pod
-  patchedResources:
-  - patchedResource2.yaml
+  patchedResources: patchedResource2.yaml
   policy: add-apparmor-annotations
   resources:
   - pod02
