--- a/psp-migration/add-runtimeClassName/.kyverno-test/kyverno-test.yaml
+++ b/psp-migration/add-runtimeClassName/.kyverno-test/kyverno-test.yaml
@@ -8,8 +8,7 @@ resources:
 - resource.yaml
 results:
 - kind: Pod
-  patchedResources:
-  - patchedResource1.yaml
+  patchedResources: patchedResource1.yaml
   policy: add-runtimeclassname
   resources:
   - pod01
