--- a/velero/backup-all-volumes/.kyverno-test/kyverno-test.yaml
+++ b/velero/backup-all-volumes/.kyverno-test/kyverno-test.yaml
@@ -8,24 +8,21 @@ resources:
 - resource.yaml
 results:
 - kind: Deployment
-  patchedResources:
-  - patchedResource-fourth.yaml
+  patchedResources: patchedResource-fourth.yaml
   policy: backup-all-volumes
   resources:
   - foo/fourth
   result: pass
   rule: autogen-backup-velero-pv
 - kind: Pod
-  patchedResources:
-  - patchedResource-third.yaml
+  patchedResources: patchedResource-third.yaml
   policy: backup-all-volumes
   resources:
   - foo/third
   result: pass
   rule: backup-velero-pv
 - kind: Pod
-  patchedResources:
-  - patchedResource.yaml
+  patchedResources: patchedResource.yaml
   policy: backup-all-volumes
   resources:
   - foo/first
