Fix value key exchange in require drop all rule in disallow caps restrict
the value and key mistakenly misplaced. the value of value is also case sensitive and not catch the workloads pattern value.

Signed-off-by: Qelichkhan <Qelichkhan@gmail.com>

--- a/pod-security/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
+++ b/pod-security/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
@@ -36,9 +36,12 @@ spec:
             deny:
               conditions:
                 all:
-                - key: ALL
+                - key: "{{ element.securityContext.capabilities.drop[] || `[]` }}"
                   operator: AnyNotIn
-                  value: "{{ element.securityContext.capabilities.drop[] || `[]` }}"
+                  value: 
+                  - ALL
+                  - All
+                  - all
     - name: adding-capabilities-strict
       match:
         any:
