--- a/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
+++ b/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-capabilities
   annotations:
     policies.kyverno.io/title: Disallow Capabilities in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.14.0
     kyverno.io/kubernetes-version: "1.30+"
@@ -13,9 +13,9 @@ metadata:
       Adding capabilities beyond those listed in the policy must be disallowed.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
    resourceRules:
