--- a/pod-security-vpol/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
+++ b/pod-security-vpol/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-host-namespaces
   annotations:
     policies.kyverno.io/title: Disallow Host Namespaces in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.14.0
     kyverno.io/kubernetes-version: "1.30+"
@@ -16,7 +16,7 @@ metadata:
       fields which make use of these host namespaces are unset or set to `false`.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
     background:
       enabled: true
