--- a/pod-security-vpol/baseline/disallow-host-path/disallow-host-path.yaml
+++ b/pod-security-vpol/baseline/disallow-host-path/disallow-host-path.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-host-path
   annotations:
     policies.kyverno.io/title: Disallow hostPath in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod,Volume
     policies.kyverno.io/minversion: 1.14.0
@@ -15,9 +15,9 @@ metadata:
       and should not be allowed. This policy ensures no hostPath volumes are in use.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
