--- a/pod-security-vpol/baseline/disallow-host-process/disallow-host-process.yaml
+++ b/pod-security-vpol/baseline/disallow-host-process/disallow-host-process.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-host-process
   annotations:
     policies.kyverno.io/title: Disallow hostProcess in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -16,9 +16,9 @@ metadata:
       the `hostProcess` field, if present, is set to `false`.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
