--- a/pod-security-vpol/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
+++ b/pod-security-vpol/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-privileged-containers
   annotations:
     policies.kyverno.io/title: Disallow Privileged Containers in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -15,9 +15,9 @@ metadata:
       ensures Pods do not call for privileged mode.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
