--- a/pod-security-vpol/baseline/disallow-proc-mount/disallow-proc-mount.yaml
+++ b/pod-security-vpol/baseline/disallow-proc-mount/disallow-proc-mount.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-proc-mount
   annotations:
     policies.kyverno.io/title: Disallow procMount in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -17,9 +17,9 @@ metadata:
       server.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
