--- a/pod-security-vpol/baseline/disallow-selinux/disallow-selinux.yaml
+++ b/pod-security-vpol/baseline/disallow-selinux/disallow-selinux.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-selinux
   annotations:
     policies.kyverno.io/title: Disallow SELinux in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -15,9 +15,9 @@ metadata:
       ensures that the `seLinuxOptions` field is undefined.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
