--- a/pod-security-vpol/baseline/restrict-seccomp/restrict-seccomp.yaml
+++ b/pod-security-vpol/baseline/restrict-seccomp/restrict-seccomp.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-seccomp
   annotations:
     policies.kyverno.io/title: Restrict Seccomp in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -16,9 +16,9 @@ metadata:
       set to `RuntimeDefault` or `Localhost`.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
