--- a/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
+++ b/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-sysctls
   annotations:
     policies.kyverno.io/title: Restrict sysctls in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -19,9 +19,9 @@ metadata:
       a Pod.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
