--- a/pod-security-vpol/restricted/disallow-capabilities-strict/.kyverno-test/adding-capabilities-strict.yaml
+++ b/pod-security-vpol/restricted/disallow-capabilities-strict/.kyverno-test/adding-capabilities-strict.yaml
@@ -4,7 +4,7 @@ metadata:
   name: adding-capabilities-strict
   annotations:
     policies.kyverno.io/title: Disallow Capabilities (Strict) in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/minversion: 1.14.0
     kyverno.io/kyverno-version: 1.14.0
