--- a/pod-security-vpol/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
+++ b/pod-security-vpol/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
@@ -4,7 +4,7 @@ metadata:
   name: disallow-privilege-escalation
   annotations:
     policies.kyverno.io/title: Disallow Privilege Escalation in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -15,9 +15,9 @@ metadata:
       This policy ensures the `allowPrivilegeEscalation` field is set to `false`.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
