--- a/pod-security-vpol/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
+++ b/pod-security-vpol/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-seccomp-strict
   annotations:
     policies.kyverno.io/title: Restrict Seccomp (Strict) in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     policies.kyverno.io/minversion: 1.14.0
@@ -18,9 +18,9 @@ metadata:
       using `anyPattern` from being persisted properly in Kubernetes 1.23.0-1.23.2.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
