--- a/pod-security-vpol/restricted/restrict-volume-types/restrict-volume-types.yaml
+++ b/pod-security-vpol/restricted/restrict-volume-types/restrict-volume-types.yaml
@@ -4,7 +4,7 @@ metadata:
   name: restrict-volume-types
   annotations:
     policies.kyverno.io/title: Restrict Volume Types in ValidatingPolicy
-    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
+    policies.kyverno.io/category: Pod Security Standards (Restricted)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod,Volume
     policies.kyverno.io/minversion: 1.14.0
@@ -16,9 +16,9 @@ metadata:
       This policy blocks any other type of volume other than those in the allow list.
 spec:
   validationActions:
-     - Audit
+     - Deny
   evaluation:
-    background:
+    admission:
       enabled: true
   matchConstraints:
     resourceRules:
