--- a/pod-security-vpol/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
+++ b/pod-security-vpol/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
@@ -20,6 +20,9 @@ spec:
   evaluation:
     background:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
