--- a/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
+++ b/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
@@ -23,6 +23,9 @@ spec:
   evaluation:
     admission:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
