--- a/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
+++ b/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
@@ -17,6 +17,9 @@ spec:
   evaluation:
     admission:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
    resourceRules:
     - apiGroups:   [""]
