--- a/pod-security-vpol/baseline/disallow-host-ports/disallow-host-ports.yaml
+++ b/pod-security-vpol/baseline/disallow-host-ports/disallow-host-ports.yaml
@@ -19,6 +19,9 @@ spec:
   evaluation:
     admission:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
