--- a/pod-security-vpol/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
+++ b/pod-security-vpol/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
@@ -19,6 +19,9 @@ spec:
   evaluation:
     admission:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
