--- a/pod-security-vpol/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security-vpol/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -19,6 +19,9 @@ spec:
   evaluation:
     admission:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
