--- a/pod-security-vpol/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
+++ b/pod-security-vpol/restricted/require-run-as-nonroot/require-run-as-nonroot.yaml
@@ -19,6 +19,9 @@ spec:
   evaluation:
     admission:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
