--- a/pod-security-vpol/restricted/restrict-volume-types/restrict-volume-types.yaml
+++ b/pod-security-vpol/restricted/restrict-volume-types/restrict-volume-types.yaml
@@ -20,6 +20,9 @@ spec:
   evaluation:
     admission:
       enabled: true
+  autogen:
+    validatingAdmissionPolicy:
+      enabled: true
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
