disable pod controllers for vap tests
Signed-off-by: Frank Jogeleit <frank.jogeleit@web.de>

--- a/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
+++ b/pod-security-vpol/baseline/disallow-capabilities/disallow-capabilities.yaml
@@ -20,6 +20,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
    resourceRules:
     - apiGroups:   [""]
