--- a/pod-security-vpol/baseline/disallow-host-path/disallow-host-path.yaml
+++ b/pod-security-vpol/baseline/disallow-host-path/disallow-host-path.yaml
@@ -22,6 +22,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
