--- a/pod-security-vpol/baseline/disallow-proc-mount/disallow-proc-mount.yaml
+++ b/pod-security-vpol/baseline/disallow-proc-mount/disallow-proc-mount.yaml
@@ -24,6 +24,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
