--- a/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
+++ b/pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
@@ -26,6 +26,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
