--- a/pod-security-vpol/baseline/disallow-host-process/disallow-host-process.yaml
+++ b/pod-security-vpol/baseline/disallow-host-process/disallow-host-process.yaml
@@ -23,6 +23,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
