--- a/pod-security-vpol/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
+++ b/pod-security-vpol/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
@@ -22,6 +22,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
