--- a/pod-security-vpol/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
+++ b/pod-security-vpol/restricted/disallow-privilege-escalation/disallow-privilege-escalation.yaml
@@ -22,6 +22,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
