--- a/pod-security-vpol/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security-vpol/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -22,6 +22,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
