--- a/pod-security-vpol/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
+++ b/pod-security-vpol/restricted/restrict-seccomp-strict/restrict-seccomp-strict.yaml
@@ -25,6 +25,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
