--- a/pod-security-vpol/restricted/restrict-volume-types/restrict-volume-types.yaml
+++ b/pod-security-vpol/restricted/restrict-volume-types/restrict-volume-types.yaml
@@ -23,6 +23,8 @@ spec:
   autogen:
     validatingAdmissionPolicy:
       enabled: true
+    podControllers:
+      controllers: []
   matchConstraints:
     resourceRules:
       - apiGroups:   [""]
