add-ambient-mode-namespace shouldn't apply to kube-system nor istio-system namespace
Signed-off-by: Shreesh Gawande <shreeshgawande10@gmail.com>

--- a/istio/add-ambient-mode-namespace/.chainsaw-test/chainsaw-test.yaml
+++ b/istio/add-ambient-mode-namespace/.chainsaw-test/chainsaw-test.yaml
@@ -32,3 +32,15 @@ spec:
         file: patched-ns-enabled.yaml
     - assert:
         file: patched-ns-none.yaml
+  - name: step-04
+    try:
+    - apply:
+        file: namespace-kube-system.yaml
+    - apply:
+        file: namespace-istio-system.yaml
+  - name: step-05
+    try:
+    - assert:
+        file: namespace-kube-system.yaml
+    - assert:
+        file: namespace-istio-system.yaml
