chore: add 3s delay
Signed-off-by: ShutingZhao <shuting@nirmata.com>

--- a/psa/add-privileged-existing-namespaces/.chainsaw-test/chainsaw-test.yaml
+++ b/psa/add-privileged-existing-namespaces/.chainsaw-test/chainsaw-test.yaml
@@ -28,6 +28,8 @@ spec:
         file: not-patched-ns03.yaml
   - name: step-04
     try:
+    - sleep:
+        duration: 3s
     - apply:
         file: policy-update.yaml
     - assert:
