Update the description of the add-networkpolicy-dns policy
Signed-off-by: Andrew Aiken <andrew.aiken@machinemetrics.com>

--- a/best-practices/add-networkpolicy-dns/add-networkpolicy-dns.yaml
+++ b/best-practices/add-networkpolicy-dns/add-networkpolicy-dns.yaml
@@ -10,13 +10,13 @@ metadata:
     policies.kyverno.io/minversion: 1.6.0
     kyverno.io/kubernetes-version: "1.23"
     policies.kyverno.io/description: >-
-      By default, Kubernetes allows communications across all Pods within a cluster.
-      The NetworkPolicy resource and a CNI plug-in that supports NetworkPolicy must be used to restrict
-      communications. A default NetworkPolicy should be configured for each Namespace to
-      default deny all ingress and egress traffic to the Pods in the Namespace. Application
-      teams can then configure additional NetworkPolicy resources to allow desired traffic
-      to application Pods from select sources. This policy will create a new NetworkPolicy resource
-      named `default-deny` which will deny all traffic anytime a new Namespace is created.
+      By default, Kubernetes allows communication across all Pods within a cluster. The NetworkPolicy
+      resource and a CNI plug-in that supports NetworkPolicy must be used to restrict communication.
+      A default NetworkPolicy should be configured for each Namespace to deny all egress traffic
+      from the Pods while still allowing DNS resolution. Application teams can then configure additional
+      NetworkPolicy resources to allow desired traffic to application Pods from select sources. This
+      policy will create a new NetworkPolicy resource named `allow-dns` when a new Namespace is created, 
+      which will deny all egress traffic while still allowing DNS queries to the kube-system Namespace.
 spec:
   rules:
   - name: add-netpol-dns
